testdata/golden/invalid/features/incompatible_units.cm
# Invalid Unit Operations
# Incompatible units should error

## Mismatched arbitrary units
5 apples + 3 oranges
10 widgets + 5 items
100 cats - 50 dogs

## Plural vs singular (cannot auto-recognize)
# The system cannot know that "goose" and "geese" are the same unit
1 goose + 2 geese
5 cat + 3 cats
10 person + 5 people
2 mouse + 3 mice

## Known units with different dimensions
10 meters + 5 kg
100 liters - 50 pounds
5 feet * 3 meters

## Quantity * Quantity (not supported)
5 meters * 3 meters
10 kg * 2 kg
